# testbench

./: .gitignore  .gitmodules  Makefile
ansible-make/: Makefile  Vagrantfile  ansible.cfg  pyproject.toml
ansible-make/inventory/: vagrant.yml
ansible-make/scripts/vagrant/: apt.sh  yum.sh
ansible-make/tests/: test_ansible_make.py
ansible-universe/: Makefile  Vagrantfile  configure.yml  init.yml  pyproject.toml  vagrant_destroy.yml  vagrant_init.yml  vagrant_setup.yml
ansible-universe/inventory/: local.yml  vagrant.yml
ansible-universe/playbooks/db/: main.yml
ansible-universe/playbooks/dockerflask/: docker.yml  main.yml
ansible-universe/playbooks/elk/: main.yml
ansible-universe/playbooks/gluster/: main.yml
ansible-universe/playbooks/memcached/: main.yml  vars.yml
ansible-universe/playbooks/mysql/: main.yml
ansible-universe/playbooks/nginx/: main.yml
ansible-universe/playbooks/varnish/: main.yml
ansible-universe/playbooks/www/: main.yml
ansible-universe/provision/: boxes.yml
ansible-universe/provision/vagrant/: apk.sh  apt.sh  boxes.yml  dnf.sh  pacman.sh  yum.sh
ansible-universe/template/: boxes.yml.j2
ansible-universe/template/distrotest/: vagrant.yml
ansible-universe/template/dockerflask/: configure.yml  vagrant.yml
ansible-universe/tests/: test_ansible_universe.py
ansible-vagrant/: Vagrantfile  ansible.cfg
ansible-vagrant/inventory/: vagrant.yml
poetry-ansible/: Vagrantfile  ansible.cfg  pyproject.toml
poetry-ansible/inventory/: inventory.ini  vagrant.yml
poetry-ansible/tests/: test_poetry_ansible.py
(+15 files in other folders)
